--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -318,7 +318,7 @@ jobs:
         echo "🔒 Finding security group (preferred: viral-comm-api proxy security group)..."
         
         PREFERRED_SG_NAME="viral-comm-api-proxy-security-dev"
-        
+        ROLE_NAME="viral-comm-api-shared-instance-profile-dev"
         # Try to find the CDK-managed security group first
         SG_ID=$(aws ec2 describe-security-groups \
           --filters "Name=vpc-id,Values=$VPC_ID" "Name=tag:Name,Values=$PREFERRED_SG_NAME" \
@@ -386,7 +386,7 @@ jobs:
           --instance-type c5d.large \
           --subnet-id $SUBNET_ID \
           --associate-public-ip-address \
-          --iam-instance-profile Name=viral-comm-api-shared-instance-profile-dev \
+          --iam-instance-profile Name="$ROLE_NAME" \
           --user-data file://user-data.sh \
           --block-device-mappings '[{"DeviceName":"/dev/sda1","Ebs":{"VolumeSize":20,"VolumeType":"gp3","DeleteOnTermination":true}}]' \
           --region ${{ env.AWS_REGION }} \
